--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,87 +2,21 @@ body{
   margin: 0;
   padding: 0;
 }
-.header{
-  background: url("https://sites.google.com/site/assoloison/_/rsrc/1455274121403/ems/DSC00086.JPG?height=300&width=400");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-height: 450px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.logo>img{
-  max-height:350px;
-  width: auto;
-  margin-top: 10%;
-  margin-bottom: 10%;
-}
-/*==============Menu==============*/
-
-nav{
-  border: dashed darkslategrey 1px;
-}
-nav>ul{
-  display: flex;
-  justify-content: space-around;
-  list-style: none;
-}
-nav>ul>li>a{
-  text-decoration: none;
-  color: black;
-}
-/*==============Contenu==============*/
-
-.contenu{
-  display: flex;
-  flex-direction: column;
-}
-.article1,.article2{
-  background-color: rgba(144, 143, 140, 0.5);
-  max-height: 250px;
-  min-height: 150px;
-  margin-bottom: 1%;
-}
-
-.fb_news{
-  height: 600px;
-  width: 130px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.fb{
-  height:250px;
-  width: 130px;
-  background-color: rgba(144, 143, 140, 0.5);
-  margin-bottom: 1%;
-}
-.news{
-  height:250px;
-  width: 130px;
-  background-color: rgba(144, 143, 140, 0.5);
-  margin-bottom: 1%;
-}
-/*==============Footer==============*/
-
+/*----------------Footer---------------------------*/
 .footer{
   display: flex;
-  background-color: #b829ff;
+  background-color: #ebc2ff;
   width:100%;
-  align-content: center;
-  flex-direction: column;
+  height: 75px;
+  justify-content: space-around;
+  align-items: center;
 }
-h1{
-  text-align: center;
-  font-size: 1em;
-}
-#image1,#image2{
+
+#image1,#image2,#image3,#image4,#image5,#image6,#image7,#image8{
   max-width: 100px;
   max-height: 50px;
 }
-#image{
-  display: flex;
-  justify-content: space-between;
+
+#image:hover{
+  cursor: pointer;
 }
