--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body{
   max-height: 350px;
 }
 .logo>img{
+  border-radius: 3%;
   max-height: 250px;
   margin:10% 0% 10% 10%;
   display: flex;
@@ -60,30 +61,32 @@ nav>ul>li>a:hover{
 }
 .container_article{
   flex-grow: 5;
+  margin-left: 10%;
+  margin-top: 2%;
 }
 .article1,.article2{
   background-color: rgba(144, 143, 140, 0.5);
-  max-height: 280px;
-  min-height: 250px;
+  max-height: 400px;
+  min-height: 400px;
   margin-bottom: 1%;
 }
 .fb_news{
-  height: 600px;
-  width: 130px;
+  margin-top: 2%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-end;
   flex-grow: 1;
+  margin-right: 2%;
 }
 .fb{
-  height:250px;
+  height:400px;
   width: 200px;
   background-color: rgba(144, 143, 140, 0.5);
   margin-bottom: 1%;
 }
 .news{
-  height:250px;
+  height:400px;
   width: 200px;
   background-color: rgba(144, 143, 140, 0.5);
   margin-bottom: 1%;
