--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,8 @@ body{
 /*==============Menu==============*/
 
 nav{
+  width: 100%;
+  position: absolute;
   font-family: "Trajan";
   background: linear-gradient(to right, #ebc2ff, #fcd0a2, #c4f38c, #93c4f6);
   border: solid darkslategrey 1px;
@@ -53,6 +55,13 @@ nav>ul>li:hover{
 nav>ul>li>a:hover{
   color: white;
 }
+.submenu{
+  display: none;
+}
+ li:hover ul.submenu, li li:hover ul.menu {
+   display:block;
+ }
+
 /*==============Contenu==============*/
 
 .contenu{
@@ -62,7 +71,7 @@ nav>ul>li>a:hover{
 .container_article{
   flex-grow: 5;
   margin-left: 10%;
-  margin-top: 2%;
+  margin-top: 4%;
 }
 .article1,.article2{
   background-color: rgba(144, 143, 140, 0.5);
@@ -71,7 +80,7 @@ nav>ul>li>a:hover{
   margin-bottom: 1%;
 }
 .fb_news{
-  margin-top: 2%;
+  margin-top: 4%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -91,6 +100,7 @@ nav>ul>li>a:hover{
   background-color: rgba(144, 143, 140, 0.5);
   margin-bottom: 1%;
 }
+
 /*----------------Footer---------------------------*/
 .footer{
   display: flex;
